--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ p {
 body {
     background-color: #fdfdfd;
     margin: 0;
-    overflow-x:hidden;
+    overflow-x: hidden;
     position: relative;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -114,7 +114,7 @@ nav h1 a {
     font-weight: 200;
     letter-spacing: 10px;
     text-transform: uppercase;
-    
+
 }
 
 #breadcrumb {
@@ -215,7 +215,7 @@ nav h1 a {
     display: block;
     margin: 0;
     max-width: 100%;
-    min-width: 100%;
+    height:auto;
 }
 
 #restaurants-list li h1 {
@@ -255,22 +255,6 @@ nav h1 a {
     z-index: 1000;
 }
 
-/*
-.inside .flex-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-}
-*/
-
-/*
-.inside .box {
-    width: 100%;
-}
-*/
-
 
 .inside #map-container {
     position: fixed;
@@ -289,7 +273,7 @@ nav h1 a {
 }
 
 .inside #footer {
-        width: 97%;
+    width: 97%;
 }
 
 #restaurant-name {
@@ -303,8 +287,11 @@ nav h1 a {
     line-height: 1.1;
 }
 
-#restaurant-img {
-    width: 90%;
+   #restaurant-img {
+        border: 2px solid #ccc;
+        border-radius:20px;
+        max-width: 100%;
+        height:auto;
 }
 
 #restaurant-address {
@@ -339,7 +326,7 @@ nav h1 a {
 
 #reviews-container h2 {
     color: #f58500;
-    font-size: 24pt;
+    font-size: 22pt;
     font-weight: 300;
     letter-spacing: -1px;
     padding-bottom: 1pt;
@@ -367,8 +354,34 @@ nav h1 a {
     margin: 0 0 10px;
 }
 
-#reviews-list li .date {
-    display: inline;
+#reviews-list .reviewer-data {
+    padding:10px 0px 0px 5px;
+    margin-bottom: 5px;
+    background:#555353;
+    border-radius:10px;
+   
+
+}
+
+#reviews-list li .reviewer-data .name {
+    width: 50px;
+    margin-right: 100px;
+    display: inline-block;
+    font-size: 14pt;
+    color:#fff;
+}
+
+#reviews-list li .reviewer-data .date {
+    display: inline-block;
+    color:#fff;
+}
+
+#reviews-list li .rating {
+    width: 80px;
+    padding-left: 10px;
+    background-color: #f58500;
+    color: #fff;
+    text-transform: uppercase;
 }
 
 #restaurant-hours td {
